fixing bleed out of long filename in upload modal (#1875)

--- a/theme/themes/pastanaga/extras/contents.less
+++ b/theme/themes/pastanaga/extras/contents.less
@@ -125,3 +125,10 @@
     background-color: #edf1f2 !important;
   }
 }
+
+.ui.page.modals .content {
+  .upload-row {
+    white-space: normal;
+    word-break: break-all;
+  }
+}
